# lpl

./: .gitmodules  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  lpl.h  lpl.l  lpl_parser.y  lpl_scanner.l  main.c  main.cpp  make_debug.sh  node.c  node.cpp  node.h  start.sh
liblpl/: CMakeLists.txt
liblpl/include/: node.h  parser.h
liblpl/src/: arithmetic.inl  compile_arithmetic.sh  compile_logical.awk  compile_logical.sh  dyadic.tpl  logical.c  logical.inl  lpl_parser.c  lpl_parser.h  lpl_parser.out  lpl_scanner.l  node.c
libparser/: Makefile  Makefile.am  arithmetic.tpl  compile_arithmetic.awk  compile_logical.awk  compile_logical.sh  compile_ops.sh  configure.ac  debug.h  dyadic.tpl  lpl_errors.h  lpl_parser.y  lpl_scanner.l  node.c  node.h  ops.tpl  parser.c  parser.h
libparser/nodes/: Makefile
libparser/ops/: add.inl  compile_ops.sh  div.inl  mult.inl  ops.tpl  sub.inl
libs/libparser/include/: lpl_errors.h
libs/libparser/src/: arithmetic.c  lpl_scanner.c  lpl_scanner.h  parser.c
src/: Makefile  Makefile.am  lpl  lpl.c  lpl.cpp  lpl_docs.config  main.cpp  start.sh
src/node/: Makefile  addNode.cpp  divNode.cpp  doubleNode.cpp  errorNode.cpp  intNode.cpp  main.cpp  multNode.cpp  node.cpp  node.h  subNode.cpp  visitors.cpp  visitors.h
src/node_old/: node.h
src/parse/: Makefile  lpl_parser.y  lpl_scanner.l  parser.cpp  parser.h
src/parse/node/: node.cpp
src/parser/: Makefile  lpl_parser.y  lpl_scanner.l  parser.c  parser.cpp  parser.h
src/parser/node/: addNode.cpp  doubleNode.cpp
src/parser/nodes/: Makefile  addNode.cpp  bangNode.cpp  debug.h  divNode.cpp  doubleNode.cpp  intArrayNode.cpp  intNode.cpp  main.cpp  multNode.cpp  negNode.cpp  node.c  node.cpp  node.h  node_errors.cpp  node_errors.h  subNode.cpp  visitors.cpp  visitors.h
src/test/: Makefile  lpl_memchk.cpp  test_lpl_arithmetic.cpp
src/tests/: Makefile  addNode.cpp  debug.h  doubleNode.cpp  errorNode.cpp  intNode.cpp  main.cpp  node.cpp  node.h  visitors.cpp  visitors.h
