AC_INIT([lpl],[0.1])
AM_INIT_AUTOMAKE([subdir-objects -Wall -Werror foreign])
AM_MAINTAINER_MODE([disable])
AC_CONFIG_SRCDIR([src])

# Check for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC
AC_PROG_RANLIB

AM_PROG_AR

AC_CONFIG_FILES([Makefile
src/Makefile
libparser/Makefile
libcol/Makefile
])

AC_OUTPUT
